--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body> <!--html元素，包含了所有要顯示於頁面瀏覽的內容-->
     <h1>&#127804 MEOW &#127804</h1>
     <button>Change user</button>
-    <img src="shellyHZX.github.io\cat_3.png" alt="a sitting cat" /> <!--將圖片插入頁面中的 HTML code，在雙引號中貼上路徑(src=source)。alt代表的是當圖片無法顯示時所顯示的替代文字-->
+    <img src="cat_3.png" alt="a sitting cat" /> <!--將圖片插入頁面中的 HTML code，在雙引號中貼上路徑(src=source)。alt代表的是當圖片無法顯示時所顯示的替代文字-->
     <!--<h2>MEOW</h2>
     <h3>MEOW</h3>
     <h4>MEOW</h4>
